# EvoBench

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
benchmark/: cli.py  schemas.py
benchmark/adapters/: llm.py  retriever.py
benchmark/agents/: base.py  claim_agent.py  judge_agent.py  question_agent.py  sample_factory_agent.py  source_agent.py  source_selector_agent.py  verifier_agent.py
benchmark/agents/skills/: __init__.py  _document_common.py  base.py  registry.py
benchmark/agents/skills/doc_to_answer/: README.md  __init__.py  prompts.py  skill.py
benchmark/agents/skills/doc_to_qa/: README.md  __init__.py  prompts.py  skill.py
benchmark/agents/skills/doc_to_qa_steps/: README.md  __init__.py  prompts.py  skill.py
benchmark/agents/skills/doc_to_question/: README.md  __init__.py  prompts.py  skill.py
benchmark/agents/skills/error_to_training_samples/: README.md  __init__.py  (+2 more)
benchmark/api/: main.py
benchmark/arena/: battle.py  elo.py
benchmark/core/: config.py
benchmark/evaluation/: aggregation.py  scorers.py
benchmark/pipelines/: evaluation.py  generation.py  sample_generation.py
benchmark/postprocessors/: __init__.py  experience_to_qa.py
benchmark/samples/: __init__.py  converters.py
benchmark/storage/: db.py  repository.py
configs/: sample_skills.yaml  scoring.yaml  skills.yaml
data/: corpus.jsonl  samples.jsonl
docs/: IMPLEMENTATION_PLAN.md  UNIFIED_SAMPLE_SCHEMA.md
scripts/: nightly_refresh.py
tests/: test_agents_v2.py  test_elo.py  test_scorer.py  test_unified_sample_skills.py
(+5 files in other folders)
