[project]
name = "dynamic-benchmark-framework"
version = "0.1.0"
description = "Dynamic benchmark framework for high-value data evaluation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.9",
  "rich>=13.7",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.8"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["benchmark*"]
